add landing page to gui prototype

--- a/src/main/html/gui-prototype/index.html
+++ b/src/main/html/gui-prototype/index.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>TO FILL</title>
+    <title>Miss-Mint-Filialmanagement</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,8 +56,19 @@
 </nav>
 
 <div class="container mt-md-5">
-    <h1>TO FILL</h1>
-    TO FILL
+    <h1>Miss-Mint-Filialmanagement</h1>
+
+    <p><strong>Bitte melden Sie sich an, um die Management-Software zu nutzen.</strong></p>
+
+    <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
+        diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+        takimata sanctus est Lorem ipsum dolor sit amet.
+    </p>
+
 </div>
 
 <footer class="border-top mt-md-5 pt-sm-2">
