--- a/src/main/html/gui-prototype/räume.html
+++ b/src/main/html/gui-prototype/räume.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="aufnahme.html">Annahme</a>
+                    <a class="nav-link" href="annahme.html">Annahme</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aufträge.html">Aufträge</a>
