--- a/src/main/html/gui-prototype/template.html
+++ b/src/main/html/gui-prototype/template.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="annahme.html">Annahme</a>
+                    <a class="nav-link" href="receiving.html">Annahme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aufträge.html">Aufträge</a>
+                    <a class="nav-link" href="orders.html">Aufträge</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
@@ -38,12 +38,11 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="räume.html">Räume</a>
-                        <a class="dropdown-item" href="materialien.html">Materialien</a>
-                        <a class="dropdown-item" href="arbeitsgeräte.html">Arbeitsgeräte</a>
-                        <a class="dropdown-item" href="bilanzen.html">Bilanzen</a>
+                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="material.html">Materialien</a>
+                        <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="nutzer.html">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" href="users.html">Nutzer-Verwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item">
