--- a/src/main/html/gui-prototype/material.html
+++ b/src/main/html/gui-prototype/material.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>Miss-Mint-Filialmanagement</title>
+    <title>Materialien</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,18 +55,38 @@
 </nav>
 
 <div class="container mt-md-5">
-    <h1>Miss-Mint-Filialmanagement</h1>
+    <h1>Materialien</h1>
 
-    <p><strong>Bitte melden Sie sich an, um die Management-Software zu nutzen.</strong></p>
-
-    <p>
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed
-        diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-        takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Material</th>
+            <th scope="col">Anzahl</th>
+            <th scope="col">Einheit</th>
+            <th scope="col">Aktionen</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">Garn</th>
+            <td>100</td>
+            <td>Meter</td>
+            <td>
+                <a class="btn btn-primary" href="#" role="button">Verbrauchen</a>
+                <a class="btn btn-secondary" href="#" role="button">Nachbestellen</a>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Knöpfe</th>
+            <td>4</td>
+            <td>Stück</td>
+            <td>
+                <a class="btn btn-primary" href="#" role="button">Verbrauchen</a>
+                <a class="btn btn-secondary" href="#" role="button">Nachbestellen</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
 </div>
 
