--- a/src/main/html/gui-prototype/orders.html
+++ b/src/main/html/gui-prototype/orders.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="annahme.html">Annahme</a>
+                    <a class="nav-link" href="receiving.html">Annahme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aufträge.html">Aufträge</a>
+                    <a class="nav-link" href="orders.html">Aufträge</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
@@ -38,12 +38,11 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="räume.html">Räume</a>
-                        <a class="dropdown-item" href="materialien.html">Materialien</a>
-                        <a class="dropdown-item" href="arbeitsgeräte.html">Arbeitsgeräte</a>
-                        <a class="dropdown-item" href="bilanzen.html">Bilanzen</a>
+                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="material.html">Materialien</a>
+                        <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="nutzer.html">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" href="users.html">Nutzer-Verwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -61,7 +60,7 @@
     <div class="card mt-2">
         <div class="card-header">
             <em>
-                Knöpfe annähen
+                Blauer Frack
             </em>
             - 8adfdf53-0e11-499f-af36-efbc9db8a7f9
         </div>
@@ -79,8 +78,8 @@
                         <td>Mark Zuckerberg</td>
                     </tr>
                     <tr>
-                        <th scope="row">Raum</th>
-                        <td>B103-E</td>
+                        <th scope="row">Bearbeitung</th>
+                        <td>in B103-E von Sebastian Müller</td>
                     </tr>
                     <tr>
                         <th scope="row">Materialien</th>
@@ -94,15 +93,12 @@
                 </table>
             </div>
         </div>
-        <div class="card-footer text-muted">
-            <a class="btn btn-primary" href="#">Fertigstellen</a>
-        </div>
     </div>
 
     <div class="card mt-2">
         <div class="card-header">
             <em>
-                alten Schlüssel kopieren
+                Alter Garagen-Schlüssel
             </em>
             - b1f26414-a8ab-468a-b2f1-22f60e2f2f7b
         </div>
@@ -120,10 +116,6 @@
                         <td>Karl Schuster</td>
                     </tr>
                     <tr>
-                        <th scope="row">Raum</th>
-                        <td><em>wartend</em></td>
-                    </tr>
-                    <tr>
                         <th scope="row">Materialien</th>
                         <td>Schlüsselrohling</td>
                     </tr>
@@ -134,9 +126,6 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="card-footer text-muted">
-            <a class="btn btn-primary" href="#">Bearbeiten</a>
         </div>
     </div>
 
