--- a/src/main/html/gui-prototype/receiving.html
+++ b/src/main/html/gui-prototype/receiving.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>Materialien</title>
+    <title>Annahme</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="annahme.html">Annahme</a>
+                    <a class="nav-link" href="receiving.html">Annahme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aufträge.html">Aufträge</a>
+                    <a class="nav-link" href="orders.html">Aufträge</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
@@ -38,12 +38,11 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="räume.html">Räume</a>
-                        <a class="dropdown-item" href="materialien.html">Materialien</a>
-                        <a class="dropdown-item" href="arbeitsgeräte.html">Arbeitsgeräte</a>
-                        <a class="dropdown-item" href="bilanzen.html">Bilanzen</a>
+                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="material.html">Materialien</a>
+                        <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="nutzer.html">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" href="users.html">Nutzer-Verwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -56,39 +55,32 @@
 </nav>
 
 <div class="container mt-md-5">
-    <h1>Materialien</h1>
+    <h1>Annahme</h1>
+    <form action="cost.html">
+        <h3>Auftrag</h3>
+        <div class="form-group">
+            <label for="name">Name des Kunden</label>
+            <input class="form-control" id="name" placeholder="Name" required type="text">
+        </div>
+        <div class="form-group">
+            <label for="description">Kurzbeschreibung des Gegstandes</label>
+            <input class="form-control" id="description" placeholder="Beschreibung" required type="text">
+        </div>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Material</th>
-            <th scope="col">Anzahl</th>
-            <th scope="col">Einheit</th>
-            <th scope="col">Aktionen</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th scope="row">Garn</th>
-            <td>100</td>
-            <td>Meter</td>
-            <td>
-                <a class="btn btn-primary" href="#" role="button">Verbrauchen</a>
-                <a class="btn btn-secondary" href="#" role="button">Nachbestellen</a>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">Knöpfe</th>
-            <td>4</td>
-            <td>Stück</td>
-            <td>
-                <a class="btn btn-primary" href="#" role="button">Verbrauchen</a>
-                <a class="btn btn-secondary" href="#" role="button">Nachbestellen</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+        <h3>Dienstleistung</h3>
+        <div class="form-group">
+            <label for="service-category">Dienstleistungs-Kategorie</label>
+            <select class="form-control" id="service-category">
+                <option selected>Flickschusterei (Absätze)</option>
+                <option selected>Flickschusterei (Sohlen)</option>
+                <option>Nähservice (Knöpfe)</option>
+                <option>Schlüsseldienst (Schlüssel kopieren)</option>
+                <option>...</option>
+            </select>
+        </div>
 
+        <button class="btn btn-primary" type="submit">Kosten berechnen</button>
+    </form>
 </div>
 
 <footer class="border-top mt-md-5 pt-sm-2">
