--- a/src/main/html/gui-prototype/ticket.html
+++ b/src/main/html/gui-prototype/ticket.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>Annahme</title>
+    <title>Auftragszettel für bb46124d-aeb3-4d85-9f2f-db957b45cebb</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="annahme.html">Annahme</a>
+                    <a class="nav-link" href="receiving.html">Annahme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aufträge.html">Aufträge</a>
+                    <a class="nav-link" href="orders.html">Aufträge</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
@@ -38,12 +38,11 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="räume.html">Räume</a>
-                        <a class="dropdown-item" href="materialien.html">Materialien</a>
-                        <a class="dropdown-item" href="arbeitsgeräte.html">Arbeitsgeräte</a>
-                        <a class="dropdown-item" href="bilanzen.html">Bilanzen</a>
+                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="material.html">Materialien</a>
+                        <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="nutzer.html">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" href="users.html">Nutzer-Verwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -56,60 +55,32 @@
 </nav>
 
 <div class="container mt-md-5">
-    <h1>Annahme</h1>
-    <form>
-        <h3>Kunde</h3>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="name">Name Kunde</label>
-                <input class="form-control" id="name" placeholder="Name" type="email">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="firstname">Vorname Kunde</label>
-                <input class="form-control" id="firstname" placeholder="Vorname" type="text">
-            </div>
-        </div>
-
-        <h3>Dienstleistung</h3>
-        <div class="form-group">
-            <label for="task">Auftragsbeschreibung</label>
-            <input class="form-control" id="task" placeholder="Auftrag" type="text">
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="service-category">Dienstleistungs-Kategorie</label>
-                <select class="form-control" id="service-category">
-                    <option selected>Flickschusterei</option>
-                    <option>Nähservice</option>
-                    <option>Schlüsseldienst</option>
-                    <option>...</option>
-                </select>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="service">Dienstleistung</label>
-                <select class="form-control" id="service">
-                    <option selected>Wird dann automatisch ermittelt</option>
-                    <option>z. B.: Absätze</option>
-                    <option>z. B.: Knöpfe</option>
-                    <option>...</option>
-                </select>
-            </div>
-        </div>
-        <!-- Inwiefern u. U. die Eingabe mehrere Dienstleitungen realisiert werden sollen, muss mit dem Kunden besprochen werden. -->
-
-        <div class="form-group">
-            <div class="form-check">
-                <input class="form-check-input" id="gridCheck" type="checkbox">
-                <label class="form-check-label" for="gridCheck">
-                    Der Kunde hat die 5,73€ [wird automatisch ermittelt] bezahlt.
-                </label>
-                <!-- Wie diese Funktion ohne Javascript umgestzt wird, muss noch evaluiert werden -->
-            </div>
-        </div>
-
-        <button class="btn btn-primary" type="submit">Auftrag einreichen</button>
-    </form>
+    <h1>Miss Mint Mending Point Auftragszettel</h1>
+    <table class="table">
+        <tbody>
+        <tr>
+            <th scope="row">Auftragsnummer</th>
+            <td>bb46124d-aeb3-4d85-9f2f-db957b45cebb</td>
+        </tr>
+        <tr>
+            <th scope="row">Kunde</th>
+            <td>Max Mustermann</td>
+        </tr>
+        <tr>
+            <th scope="row">Dienstleistung</th>
+            <td>Flickschusterei (Sohlen)</td>
+        </tr>
+        <tr>
+            <th scope="row">Preis</th>
+            <td>1,54€</td>
+        </tr>
+        <tr>
+            <th scope="row">Vorraussichtlicher Fertigstellungstermin</th>
+            <td>12.11.2019</td>
+        </tr>
+        </tbody>
+    </table>
+    <button class="btn btn-primary">Drucken</button>
 </div>
 
 <footer class="border-top mt-md-5 pt-sm-2">
