--- a/src/main/html/gui-prototype/users.html
+++ b/src/main/html/gui-prototype/users.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>Räume</title>
+    <title>TO FILL</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="annahme.html">Annahme</a>
+                    <a class="nav-link" href="receiving.html">Annahme</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aufträge.html">Aufträge</a>
+                    <a class="nav-link" href="orders.html">Aufträge</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
@@ -38,12 +38,11 @@
                         Verwaltung
                     </a>
                     <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                        <a class="dropdown-item" href="räume.html">Räume</a>
-                        <a class="dropdown-item" href="materialien.html">Materialien</a>
-                        <a class="dropdown-item" href="arbeitsgeräte.html">Arbeitsgeräte</a>
-                        <a class="dropdown-item" href="bilanzen.html">Bilanzen</a>
+                        <a class="dropdown-item" href="rooms.html">Räume</a>
+                        <a class="dropdown-item" href="material.html">Materialien</a>
+                        <a class="dropdown-item" href="finance.html">Bilanzen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="nutzer.html">Nutzer-Verwaltung</a>
+                        <a class="dropdown-item" href="users.html">Nutzer-Verwaltung</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -56,37 +55,42 @@
 </nav>
 
 <div class="container mt-md-5">
-    <h1>Räume</h1>
+    <h1>Nutzerverwaltung</h1>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Vorname</th>
+            <th scope="col">Nutzername</th>
+            <th scope="col">Fähigkeiten</th>
+            <th scope="col">Aktionen</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">Peters</th>
+            <td>Petra</td>
+            <td>pperters</td>
+            <td>Nähservice, Elektrowerkstatt</td>
+            <td>
+                <a class="btn btn-primary" href="#" role="button">Bearbeiten</a>
+                <a class="btn btn-danger" href="#" role="button">Entlassen</a>
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">André</th>
+            <td>Carlo</td>
+            <td>candre</td>
+            <td>Schlüsseldienst, Elektrowerkstatt</td>
+            <td>
+                <a class="btn btn-primary" href="#" role="button">Bearbeiten</a>
+                <a class="btn btn-danger" href="#" role="button">Entlassen</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
-    <div class="card mt-2">
-        <div class="card-header">
-            <h3>B103-E</h3>
-        </div>
-        <div class="card-body">
-            <h5 class="card-title"><strong>Belegt</strong> von 8adfdf53-0e11-499f-af36-efbc9db8a7f9</h5>
-            <p class="card-text">Dieser Raum gehört zur Dienstleistung Schlüsseldienst.</p>
-            <!-- Ob Räume nur bestimme Dienstleistungen können, ist mit dem Kunden zu bereden -->
-        </div>
-        <div class="card-footer text-muted">
-            <a class="btn btn-danger" href="#">Raum löschen</a>
-        </div>
-    </div>
-
-    <div class="card mt-2">
-        <div class="card-header">
-            <h3>R104-Q</h3>
-        </div>
-        <div class="card-body">
-            <h5 class="card-title"><strong>Frei</strong></h5>
-            <p class="card-text">Dieser Raum gehört zur Dienstleistung Elektrowerkstatt.</p>
-            <!-- Ob Räume nur bestimme Dienstleistungen können, ist mit dem Kunden zu bereden -->
-        </div>
-        <div class="card-footer text-muted">
-            <a class="btn btn-danger" href="#">Raum löschen</a>
-        </div>
-    </div>
-
-    <a class="btn btn-primary mt-2" href="#">Raum hinzufügen</a>
+    <a class="btn btn-primary mt-2" href="#">Nutzer anlegen</a>
 </div>
 
 <footer class="border-top mt-md-5 pt-sm-2">
