--- a/src/main/html/gui-prototype/users.html
+++ b/src/main/html/gui-prototype/users.html
@@ -10,7 +10,7 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
-    <title>TO FILL</title>
+    <title>Nutzerverwaltung</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
